--- a/PA5.ipynb
+++ b/PA5.ipynb
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Split and Train the Dataset**"
+    "# **Split & Train the Dataset**"
    ]
   },
   {
