--- a/PA5.ipynb
+++ b/PA5.ipynb
@@ -435,7 +435,87 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# **Guide Questions**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Preprocessing\n",
+    "\n",
+    "### How did you handle missing values in numerical features?\n",
+    "- Missing values in numerical features were handled using median imputation. This method is robust to outliers and provides a reasonable estimate for missing data.\n",
+    "\n",
+    "### Why is there a need to encode the protocol_type feature, and which encoding method can be used?\n",
+    "- The `protocol_type` is categorical and needs to be encoded for the model to interpret it. **Label Encoding** was used since it efficiently converts categories to numeric values, and **Random Forest** handles categorical data well.\n",
+    "\n",
+    "## 2. Model Training\n",
+    "\n",
+    "### How did you address class imbalance in the dataset?\n",
+    "- Class imbalance was addressed using the `class_weight='balanced'` parameter in the **Random Forest** model. This adjusts the class weights inversely proportional to the class frequencies.\n",
+    "\n",
+    "### What hyperparameters of the Random Forest did you tune, and why?\n",
+    "- **Tuned Parameters:**\n",
+    "  - `n_estimators`: Number of trees in the forest. Higher values improve model performance but increase training time.\n",
+    "  - `max_depth`: Controls the depth of each tree to prevent overfitting.\n",
+    "  - `min_samples_split`: Minimum number of samples required to split a node, helping with generalization.\n",
+    "\n",
+    "### Why is a pipeline useful for this task?\n",
+    "- While a pipeline was not implemented in this case, it can ensure consistent application of preprocessing and modeling steps, reducing manual errors and improving reproducibility.\n",
+    "\n",
+    "## 3. Evaluation\n",
+    "\n",
+    "### Why is accuracy alone insufficient to evaluate this model?\n",
+    "- Accuracy may be misleading in imbalanced datasets where majority classes dominate. Evaluating using **precision**, **recall**, and **F1-score** provides a clearer understanding of model performance on minority classes.\n",
+    "\n",
+    "### Which attack type was hardest to classify, and why might this be?\n",
+    "- Without a detailed per-class analysis, identifying the hardest attack type is not certain. However, class imbalance is often a factor in misclassification. Attack types with fewer samples generally pose classification challenges.\n",
+    "\n",
+    "### How would you improve the model’s performance on minority classes?\n",
+    "- Adjust hyperparameters further using **grid search**.\n",
+    "- Implement additional resampling methods like **oversampling** or **undersampling**.\n",
+    "- Collect more training data for underrepresented attack types.\n",
+    "- Use other ensemble methods.\n",
+    "\n",
+    "## 4. Interpretation\n",
+    "\n",
+    "### Which features were most important for classification? Does this align with real-world attack patterns?\n",
+    "- **Top Features from Feature Importance:**\n",
+    "  - `num_packets`\n",
+    "  - `num_connections`\n",
+    "  - `dst_bytes`\n",
+    "  - `src_bytes`\n",
+    "- These features align with real-world scenarios, where network attacks often generate abnormal traffic patterns with large packet volumes and connection attempts.\n",
+    "\n",
+    "### How would you explain the model’s decision-making process to a non-technical team?\n",
+    "- The model evaluates network behavior using decision trees. By analyzing patterns such as traffic volume and packet size, it can detect deviations indicative of cyberattacks. Visualizations of the decision trees can be used to demonstrate how these decisions are made.\n",
+    "\n",
+    "## 5. Application\n",
+    "\n",
+    "### What steps would you take to deploy this model in a real-time network monitoring system?\n",
+    "- Integrate the model into a real-time data pipeline.\n",
+    "- Continuously monitor network traffic for anomalies.\n",
+    "- Trigger alerts upon detecting attack patterns.\n",
+    "- Regularly retrain the model with updated data for improved accuracy.\n",
+    "\n",
+    "### How would you handle new attack types not present in the training data?\n",
+    "- Implement **anomaly detection models** to flag unknown patterns.\n",
+    "- Maintain a feedback loop to capture misclassified attacks.\n",
+    "- Periodically retrain the model using new labeled data.\n",
+    "- Consider ensemble learning to enhance adaptability.\n",
+    "\n",
+    "## Conclusion\n",
+    "\n",
+    "In this assignment, we trained a **Random Forest classifier** to predict cyberattack types using a cybersecurity dataset. Preprocessing involved imputing missing values using the **median** and applying **label encoding** for categorical features. The dataset was split into training and testing sets using a 70-30 ratio.\n",
+    "\n",
+    "We performed **hyperparameter tuning** using **GridSearchCV** to find the best parameters, optimizing `n_estimators`, `max_depth`, and `min_samples_split`. The evaluation metrics including **accuracy**, **precision**, **recall**, and **F1-score** showed strong model performance, indicating its robustness in detecting attacks.\n",
+    "\n",
+    "Feature importance analysis highlighted `num_connections` and `num_packets` as the most influential factors, aligning with typical real-world attack behavior. Visualizations of decision trees provided insights into the decision-making process of the model. Potential improvements for minority class performance were also suggested.\n",
+    "\n",
+    "This assignment demonstrated the effectiveness of **Random Forest** in cybersecurity classification and provided a practical understanding of model training, evaluation, and interpretation in real-world applications."
+   ]
   }
  ],
  "metadata": {
