--- a/PA5.ipynb
+++ b/PA5.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Cybersecurity Attack Classification Using Random Forest**\n",
+    "\n",
+    "In this assignment, we focus on **Cyberattack Classification** using a **Random Forest classifier**. The goal is to build a machine learning model capable of identifying different types of cyberattacks based on network traffic data. The dataset contains various features such as **protocol type, packet size, number of connections, and bytes transmitted**, which help in distinguishing between normal and malicious activity.  \n",
+    "\n",
+    "The assignment involves **preprocessing the dataset**, **handling missing values**, **addressing class imbalance**, and **tuning hyperparameters** to improve model performance. We evaluate the model using multiple metrics like **accuracy, precision, recall, and F1-score** to ensure reliable classification, particularly for minority attack types.  \n",
+    "\n",
+    "Through **feature importance analysis and decision tree visualization**, we interpret how the model makes predictions. Finally, we discuss how this model can be deployed in **real-time network monitoring** and adapted to detect new types of cyberattacks.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# **Import Necessary Libraries & Load the Dataset**"
    ]
   },
@@ -151,13 +166,20 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# Load the dataset\n",
     "df = pd.read_csv('D:/Gits/Assignment-5/dataset/cyber_attacks(in).csv')\n",
     "\n",
     "# Display first few rows and basic info\n",
     "display(df.head())\n",
-    "display(df.info())\n"
+    "display(df.info())"
    ]
   },
   {
@@ -237,9 +259,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "# Fill missing values using median for numerical data\n",
     "df.fillna(df.median(numeric_only=True), inplace=True)\n",
     "\n",
@@ -269,8 +288,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=22)"
    ]
   },
@@ -291,8 +308,6 @@
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier, plot_tree\n",
-    "\n",
     "dt_clf = DecisionTreeClassifier(random_state=22)\n",
     "dt_clf.fit(X_train, y_train)\n",
     "\n",
@@ -343,10 +358,6 @@
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "\n",
     "# Parameters for grid search\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 200, 300],\n",
